aspect ratio images

--- a/Css/main.less
+++ b/Css/main.less
@@ -4,6 +4,7 @@
 @import "src/imageEnvelope";
 @import "src/albumOverlay";
 @import "src/pageOverlay";
+@import "src/aspectRatio";
 
 @import "album_thtml";
 
