--- a/Css/album_thtml.css
+++ b/Css/album_thtml.css
@@ -46,9 +46,8 @@
   opacity: 0.8;
 }
 .gdata-album-list .album-image-wrap {
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIklEQVQIW2NkQAJnz56tZ4TxQRxjY+NGsACMA2IzInNAAgDZSw7r4ocGigAAAABJRU5ErkJggg==);
   overflow: hidden;
-  background: radial-gradient(#a5a5a5 1%, transparent 9%) 0 0, radial-gradient(#000000 0%, transparent 6%) 8px 8px, radial-gradient(rgba(255, 255, 255, 0.1) 0%, transparent 0%) 0 1px, radial-gradient(rgba(255, 255, 255, 0.1) -31%, transparent 20%) 8px 9px;
-  background-size: 16px 16px;
   background-color: #f6f6f6;
   cursor: pointer;
 }
