--- a/Css/main.less
+++ b/Css/main.less
@@ -771,20 +771,12 @@ button {
 		width: 220px;
 		img {
 			width: 100%;
-
 		}
 	}
 }
 
-///////////
-.gdata-album-list {
-	.album-name {
-		background-color: #eeeeee;
-	}
-}
-
-.index-content {
-	//background-color: red;
+.xxx {
+	width:100%;
 }
 
 
