--- a/Css/main.less
+++ b/Css/main.less
@@ -18,7 +18,7 @@ body {
 
 }
 
-body, body * {
+body {
 	-webkit-font-smoothing: subpixel-antialiased;
 	font-family: 'texgyreadventorregular', sans-serif;
 	font-weight: 400;
@@ -29,8 +29,6 @@ h1, h2, h3 {
 }
 
 ul, li {
-	margin: 0;
-	padding: 0;
 }
 
 a {
