--- a/Templates/template.p.html
+++ b/Templates/template.p.html
@@ -1,9 +1,4 @@
-<div class="template-pxx">
-	<div class="navigation" ng-show="!loading">
-
-	</div>
-	<div class="clear"></div>
-
+<div >
 	<div class="container_12">
 		<div gridelement="currentGridElement" class="gridelement-content">
 			<div>
