--- a/Css/album_thtml.css
+++ b/Css/album_thtml.css
@@ -14,8 +14,9 @@
   text-align: center;
 }
 .gdata-album-list {
-  padding: 10px;
+  padding: 6px;
   padding-left: 0px;
+  padding-bottom: 0px;
 }
 .gdata-album-list:hover a {
   color: red;
