--- a/Css/album_thtml.less
+++ b/Css/album_thtml.less
@@ -1,8 +1,9 @@
 @import "src/utils";
 
 .gdata-album-list {
-	padding: 10px;
+	padding: 6px;
 	padding-left: 0px;
+	padding-bottom: 0px;
 	&:hover {
 		a {
 			color:red;
