--- a/Templates/template.page.html
+++ b/Templates/template.page.html
@@ -3,7 +3,7 @@
 	<div ng-show="gridElements === undefined" style="width: 100%">
 		<img src="resources/loaders/loader.gif" alt="loading..."/>
 		</div>
-	<div ng-repeat="gridelement in gridElements">
+	<div ng-repeat="gridelement in gridElements" class="animate-repeat">
 		<div gridelement="gridelement"></div>
 	</div>
 </div>
