--- a/Css/src/animations.less
+++ b/Css/src/animations.less
@@ -1,12 +1,13 @@
 @import "utils";
 
 
-.rotate{
+.rotateAnimate{
+	.Transformation(rotate(180deg));
+	.AnimateEasing(1s, cubic-bezier(.23,1.04,.32,.94));
 }
 
 .rotate:hover {
-	.Transformation(rotate(180deg));
-	.AnimateEasing(1s, cubic-bezier(.23,1.04,.32,.94));
+	.rotateAnimate;
 }
 
 .scale {
