--- a/Css/src/utils.less
+++ b/Css/src/utils.less
@@ -13,6 +13,14 @@
 	transition: all @ease @duration;
 }
 
+.AnimateEasingWithType(@duration, @ease, @type) {
+	-webkit-transition: @type @ease @duration;
+	-moz-transition: @type @ease @duration;
+	-ms-transition: @type @ease @duration;
+	-o-transition: @type @ease @duration;
+	transition: @type @ease @duration;
+}
+
 .Animate(@duration) {
 	@ease: cubic-bezier(0.075, 0.820, 0.165, 1.000);
 	.AnimateEasing(@duration, @ease);
