--- a/Css/src/utils.less
+++ b/Css/src/utils.less
@@ -1,3 +1,7 @@
+@selectedColor : #515455;
+@red: #990000;
+
+
 .TextOverflowElipsies {
 	text-overflow: ellipsis;
 	overflow: hidden;
@@ -25,7 +29,6 @@
 	@ease: cubic-bezier(0.075, 0.820, 0.165, 1.000);
 	.AnimateEasing(@duration, @ease);
 }
-
 
 .centered-container {
 	display: table;
