--- a/Css/main.less
+++ b/Css/main.less
@@ -47,8 +47,6 @@ button {
 
 .boos {
 	@linkColor : #bbb;
-	@selectedColor : #333;
-	@bcolor: red;
 
 	a, .link {
 		color: @linkColor;
@@ -56,7 +54,7 @@ button {
 			color: @selectedColor;
 		}
 		&:hover {
-			color: @bcolor;
+			color: @red;
 		}
 	}
 	.main-menu {
@@ -79,7 +77,7 @@ button {
 		text-align: right;
 		padding-right: 20px;
 		font-size: 70%;
-		color: @bcolor;
+		color: @red;
 	}
 	.groups {
 		h3 {
@@ -803,27 +801,26 @@ button {
 	}
 }
 
-
-
 .animate-repeat {
-	.Animate(1000ms);
+	.AnimateEasingWithType(3000ms, ease, all);
 	position: relative;
 }
-
-
 .animate-repeat.ng-move,
 .animate-repeat.ng-enter,
 .animate-repeat.ng-leave
 {
 	.grid_3{
-		.AnimateEasingWithType(1000ms, ease, width);
+		.AnimateEasingWithType(3000ms, ease, all);
 	}
 }
 
 .animate-repeat.ng-leave.ng-leave-active,
 .animate-repeat.ng-move,
 .animate-repeat.ng-enter {
-	opacity:0;
+	//border: 3px solid red;
+	.grid_3{
+	}
+	opacity: 0;
 }
 
 .animate-repeat.ng-leave.ng-leave-active{
@@ -837,7 +834,7 @@ button {
 .animate-repeat.ng-leave,
 .animate-repeat.ng-move.ng-move-active,
 .animate-repeat.ng-enter.ng-enter-active {
-	opacity: 1;
+
 }
 
 
