--- a/Css/main.less
+++ b/Css/main.less
@@ -781,7 +781,7 @@ button {
 
 	.xxx{
 		img {
-			.AnimateEasingWithType(300ms, ease-out, opacity);
+			//.AnimateEasingWithType(300ms, ease-out, opacity);
 			opacity: 0.7;
 		}
 		img:hover {
@@ -802,39 +802,26 @@ button {
 }
 
 .animate-repeat {
-	.AnimateEasingWithType(3000ms, ease, all);
 	position: relative;
 }
-.animate-repeat.ng-move,
+
 .animate-repeat.ng-enter,
-.animate-repeat.ng-leave
+.animate-repeat.ng-leave.ng-leave-active
 {
-	.grid_3{
-		.AnimateEasingWithType(3000ms, ease, all);
-	}
-}
 
-.animate-repeat.ng-leave.ng-leave-active,
-.animate-repeat.ng-move,
-.animate-repeat.ng-enter {
-	//border: 3px solid red;
-	.grid_3{
-	}
+	.AnimateEasing(300ms, linear);
+//	.Transform(rotateY(180deg));
+	.Transform(scale(0.5, 0.5));
 	opacity: 0;
 }
-
-.animate-repeat.ng-leave.ng-leave-active{
-	.grid_3{
-		width: 0px;
-	}
-	opacity: 0;
-}
-
 
 .animate-repeat.ng-leave,
-.animate-repeat.ng-move.ng-move-active,
 .animate-repeat.ng-enter.ng-enter-active {
+	.AnimateEasing(300ms, linear);
 
+	//.Transform(rotateY(0deg));
+	.Transform(scale(1, 1));
+	opacity: 1;
 }
 
 
