--- a/Css/main.less
+++ b/Css/main.less
@@ -527,9 +527,10 @@ button {
 		}
 	}
 
+
 	.preview-previous, .preview-next {
 		opacity: 0.1;
-		.Animate(500ms);
+		.Animate(1500ms);
 		cursor: pointer;
 			&:hover{
 			opacity: 0.7;
@@ -781,15 +782,16 @@ button {
 
 	.xxx{
 		img {
-			//.AnimateEasingWithType(300ms, ease-out, opacity);
+			.AnimateEasingWithType(300ms, ease-out, opacity);
 			opacity: 0.7;
 		}
 		img:hover {
 			opacity: 0.9;
 		}
 	}
+
 	.main-logo {
-		padding-top: 10px;
+		padding-top: 60px;
 		padding-bottom: 21px;
 		cursor: pointer;
 
