--- a/Css/main.less
+++ b/Css/main.less
@@ -8,6 +8,7 @@
 @import "src/animations";
 
 @import "album_thtml";
+@import "kontakt";
 
 body, html {
 	margin: 0;
@@ -780,15 +781,17 @@ button {
 .container_12.maincontent {
 	width: 90%;
 
-	.xxx{
-		img {
+
+//	.xxx{
+
+		.fit-image {
 			.AnimateEasingWithType(300ms, ease-out, opacity);
 			opacity: 0.7;
 		}
 		img:hover {
 			opacity: 0.9;
 		}
-	}
+//	}
 
 	.main-logo {
 		padding-top: 60px;
