--- a/Css/src/animations.less
+++ b/Css/src/animations.less
@@ -13,9 +13,12 @@
 .scale {
 	.AnimateEasing(1s, ease-in);
 }
-.scale:hover {
+.scaleAnimate {
 	.Transformation(scale(1.150,1.150));
 	.AnimateEasing(1s, cubic-bezier(.23,1.04,.32,.94));
+}
+.scale:hover {
+	.scaleAnimate;
 }
 
 
