--- a/Css/main.less
+++ b/Css/main.less
@@ -762,10 +762,15 @@ button {
 .loader-wrap{
 	height: 100%;
 	width: 100%;
-	opacity: 0.9;
+	opacity: 0.98;
 	z-index: 10001;
 	position: absolute;
 	background-color: #fff;
+
+	.ocko {
+		margin-left:-55px;
+		width: 55px;
+	}
 }
 .background-wrap {
 	height: 100%;
@@ -799,6 +804,7 @@ button {
 		cursor: pointer;
 
 		.ocko {
+			width: 55px;
 			margin-left:-58px;
 		}
 
