--- a/css/src/albumOverlay.less
+++ b/css/src/albumOverlay.less
@@ -6,7 +6,14 @@
 	.xx {
 		vertical-align: top;
 	}
-
+	.map {
+		height: 100%;
+		.map-content{
+			height: 100%;
+			padding-top: 10px;
+			padding-left: 10px;
+		}
+	}
 	.ImagePadding {
 		padding-left: 10px;
 		padding-top: 10px;
@@ -49,6 +56,12 @@
 		display: table;
 		width: 100%;
 		height: 100%;
+
+		.map {
+			.more-details-content {
+				padding: 20px;
+			}
+		}
 	}
 	.header-content {
 		vertical-align: middle;
