--- a/css/src/responsive.less
+++ b/css/src/responsive.less
@@ -12,9 +12,11 @@
  	 	font-size: 100%;
  	}
  	.container_12, .container {
-		width: 100%;
+		width: 1200px;
  	 	margin-left: auto;
  	 	margin-right: auto;
+		box-shadow: 7px -10px 15px -4px rgba(0,0,0,0.14), -7px -10px 8px -4px rgba(0,0,0,0.14);
+		padding:20px;
  	}
 
  	.icon-4x-responsive {font-size: @icon4xSize; }
@@ -33,8 +35,8 @@
 	}
 
  	.container_12, .container {
- 	 	border: 1px solid #9acd32;
- 	}
+
+	}
 
  	.icon-2x-responsive { font-size: @icon2xSize * @coefficient; }
  	.icon-3x-responsive { font-size: @icon3xSize * @coefficient; }
@@ -50,7 +52,6 @@
  	}
 
  	.container_12, .container {
- 	 	border: 1px solid blue;
  	}
 
  	.icon-2x-responsive { font-size: @icon2xSize * @coefficient; }
@@ -68,7 +69,6 @@
  	}
 
  	.container_12, .container {
- 	 	border: 1px solid yellow;
 		min-width: 340px;
 	}
 
