oprava stinu, cachovani, oprava velikosti obrazku

--- a/Css/main.less
+++ b/Css/main.less
@@ -795,6 +795,7 @@ button {
 }
 
 .container_12.maincontent {
+	min-height: 90%;
 
 	.fit-image {
 		.AnimateEasingWithType(300ms, ease-out, opacity);
