--- a/css/src/responsive.less
+++ b/css/src/responsive.less
@@ -12,10 +12,10 @@
  	 	font-size: 100%;
  	}
  	.container_12, .container {
-		width: 1200px;
+		width: 70%;
  	 	margin-left: auto;
  	 	margin-right: auto;
-		box-shadow: 7px -10px 15px -4px rgba(0,0,0,0.14), -7px -10px 8px -4px rgba(0,0,0,0.14);
+		box-shadow: 7px 5px 15px -4px rgba(0,0,0,0.14), -7px 5px 8px -4px rgba(0,0,0,0.14);
 		padding:20px;
  	}
 
