fix poctu el. na radek

--- a/Css/kontakt.css
+++ b/Css/kontakt.css
@@ -1,6 +1,8 @@
 .kontakt-default {
-  padding-left: 12px;
   min-height: 17em;
+}
+.kontakt-default .kontakt-wrap {
+  padding-left: 16px;
 }
 .kontakt-default .kontakt-content {
   padding-left: 6px;
