--- a/Css/kontakt.less
+++ b/Css/kontakt.less
@@ -1,6 +1,9 @@
 .kontakt-default{
-	padding-left: 12px;
 	min-height: 17em;
+
+	.kontakt-wrap {
+		padding-left: 16px;
+	}
 
 	.kontakt-content {
 		padding-left: 6px;
