--- a/Templates/template.page.html
+++ b/Templates/template.page.html
@@ -1,4 +1,4 @@
-<div class="grid_12">
+<div ng-class="layoutClass">
 	<div ng-show="gridElements.length === 0" style="width: 100%">&nbsp;</div>
 	<div ng-show="gridElements === undefined" style="width: 100%">
 		<img src="resources/loaders/loader.gif" alt="loading..."/>
