--- a/Css/main.less
+++ b/Css/main.less
@@ -799,10 +799,10 @@ button {
 
 	.fit-image {
 		.AnimateEasingWithType(300ms, ease-out, opacity);
-		opacity: 0.7;
-	}
-	img:hover {
-		opacity: 0.9;
+		opacity: 0.8;
+		&:hover {
+			opacity: 1;
+		}
 	}
 
 
