--- a/Css/src/imageEnvelope.less
+++ b/Css/src/imageEnvelope.less
@@ -3,12 +3,12 @@
 .image-envelope {
 	overflow: hidden;
 
+
 	.album-image {
+		border: 1px solid #9acd32;
 		max-height: 100%;
-		.AnimateEasing(300ms, ease-out);
+		//.AnimateEasing(300ms, ease-out);
 		position: relative;
-		&:hover {
-		}
 	}
 }
 
