--- a/Css/src/utils.less
+++ b/Css/src/utils.less
@@ -55,9 +55,10 @@
 }
 
 .Transformation(@type) {
-	-webkit-transform: @type;  /* Chrome, Safari 3.1+ */
-     -moz-transform: @type;  /* Firefox 3.5-15*/
-      -ms-transform: @type;  /* IE 9*/
-       -o-transform: @type;  /* Opera 10.50-12.00*/
-          transform: @type;  /* Firefox 16+, IE 10+, Opera 12.10+*/
+//	-webkit-transform: @type;  /* Chrome, Safari 3.1+ */
+//     -moz-transform: @type;  /* Firefox 3.5-15*/
+//      -ms-transform: @type;  /* IE 9*/
+//       -o-transform: @type;  /* Opera 10.50-12.00*/
+//          transform: @type;  /* Firefox 16+, IE 10+, Opera 12.10+*/
+
 }
