oprava pretekani v detailech

--- a/Css/main.less
+++ b/Css/main.less
@@ -492,7 +492,8 @@ button {
 	&.dumbBoxWrap {
 		/* The div that shows/hides. */
 		z-index: 40001; /* High z-index to ensure it appears above all content */
-		position: absolute;
+		position: fixed;
+
 		top: 0;
 		left: 0;
 	}
