refactor, prechod na gulp

--- a/Css/main.less
+++ b/Css/main.less
@@ -6,8 +6,8 @@
 @import "src/pageOverlay";
 @import "src/aspectRatio";
 @import "src/animations";
-@import "album_thtml";
-@import "kontakt";
+@import "src/album_thtml";
+@import "src/kontakt";
 
 body, html {
 	margin: 0;
