favicon, oprava mobile loga

--- a/Css/main.less
+++ b/Css/main.less
@@ -808,6 +808,22 @@ button {
 	}
 
 	.main-logo {
+		max-width:281px;
+		.a {
+			width:80%;
+			float: left;
+			img {
+				width: 100%;
+			}
+		}
+		.b {
+			width: 20%;
+			float: left;
+			margin-left: -20%;
+			img {
+				width: 100%;
+			}
+		}
 		.chujAnimation {
 			5% {
 				.Transform(scale(1.150,1.150));
@@ -832,8 +848,6 @@ button {
 		margin-top: -93px;
 		padding-bottom: 20px;
 		.ocko {
-			max-width: 55px;
-			margin-left: -58px;
 
 			-webkit-animation: chuj 15s infinite; /* Safari 4+ */
 			-moz-animation: chuj 15s infinite; /* Fx 5+ */
